--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+
+html {
+  height: 100%;
+}
+body {
+  font-family: "Arial", sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #121212;
+  color: white;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+main {
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+}
