--- a/src/app/movie-details/movie-details.component.html
+++ b/src/app/movie-details/movie-details.component.html
@@ -23,5 +23,9 @@
     <h4>THE STORY</h4>
     <hr />
     <p>{{ movie.overview }}</p>
+    <button (click)="goBack()" class="go-back-btn">
+      <span class="material-icons">arrow_back</span>Go Back
+    </button>
+    <!-- Go Back Button -->
   </div>
 </div>
